# openocr_gch

./: .gitignore  .gitmodules  README.md  _charset.ipynb  _work.ipynb  pyproject.toml  pyrightconfig.json
exp_note/: 아이디어1
exp_note/20260412_1_warmup_effectiveness/: README.md
exp_note/20260412_1_warmup_effectiveness/configs/: C_1.5.yml  G_1.5.yml
exp_note/20260412_2_epoch_for_svtr2/: README.md
exp_note/20260412_2_epoch_for_svtr2/configs/: C_e10.yml  C_e5.yml  G+C(0.5)_e10.yml  G+C(0.5)_e5.yml  G_e10.yml  G_e5.yml
exp_note/20260412_3_G_C_(G+C)_performant_compare/: README.md
exp_note/20260413_1_C_vs_G/: README.md  char_f1_analysis.ipynb
ext_openocr/tools_custom/: train_rec.py
gch/openocr_ext/tools/: train_rec.py
gch/openocr_ext/tools/engine/: config.py
gch/rm/: cfg.py
rm/: __init__.py  cfg.py
scripts/: e  r  rm  s  stop
src/: convert_datr_rds_ckpt_keys.py
src/data_90_rotate/: command.txt  rotate_to_horizontal.py  rotate_to_vertical.py
src/gch/: __init__.py  work_context.py
src/gch/openocr/: __init__.py
src/gch/openocr/openrec/: __init__.py
src/gch/openocr/openrec/losses/: __init__.py  datr_loss.py  gch_loss.py  new_gtc_loss.py
src/gch/openocr/tools/: eval_rec.py  train_rec(deprecated).py  train_rec.py  train_rec_gch.py  utility.py
src/gch/rm/: __init__.py  cfg.py  db.py
src/gch/rm/cfg_module/: hyper_params.py
src/gch/tools/: build_openocr_lmdb.py  command_manager.py
src/rotate_diff/: rotate_fill_inpaint.py
src/tiling_aug/: __init__.py  aug.py  config.yml  run.py
tools/: build_openocr_lmdb.py
(+53 files in other folders)
