[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openocr-gch"
version = "0.1.0"
description = "Extensions and custom training code for OpenOCR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "gch"

[tool.setuptools.packages.find]
where = ["gch"]
include = ["openocr*", "rm*", "tools*"]